# LaserLabyrinth

./: .gitignore  README.md  config.py  gen_block.py  gen_figures.py  grid_gen.py  hex_figure.py  hex_grid_gen.py  mirror_connector.py  opti.py  svg_gen.py
code/: .gitignore  CMakeLists.txt  adc_tx5.h  common.h  rpi.sh  timer_tx5.h  usi_uart.c  usi_uart.h
code/LaserBoth/: CMakeLists.txt  main.c
code/LaserStart/: CMakeLists.txt  main.c
doku/: doku.md  draw.io.aufbau.xml  ideen_doku_intro.txt  neu.aufbau.xml  spiegel_aufbau.xml  start.fzz  workshop.md
doku/pngs/: convert.sh
eagle/: ll_both.brd  ll_both.sch  ll_start.brd  ll_start.sch  ll_target.brd  ll_target.sch
scad/: bbox.scad  block_base.scad  block_turret.scad  blocker_base.scad  blocker_base2.scad  cable_pipe.scad  grid.scad  hex_figure.scad  laser_start.scad  laser_start_top.scad  mirror_connector.scad  mirror_connector_old.scad  mirror_tile1.scad  mirror_tile2.scad  tile_blocker.scad  tile_blocker2.scad
stl/: block_base.stl  block_base_bevel.stl  laser_start.stl  laser_start_top.stl  mirror_connector.stl  mirror_tile1.scad  mirror_tile1.stl  tile_blocker.stl
svg/: convert.sh
